--- a/themes/_config.btterfly.yml
+++ b/themes/_config.btterfly.yml
@@ -51,7 +51,7 @@ avatar:
 disable_top_img: false
 
 # The banner image of home page
-index_img:
+index_img: https://s2.loli.net/2023/06/07/NIxXFrkUBieA9Py.jpg
 
 # If the banner of page not setting, it will show the top_img
 default_top_img:
