--- a/themes/_config.btterfly.yml
+++ b/themes/_config.btterfly.yml
@@ -51,8 +51,7 @@ avatar:
 disable_top_img: false
 
 # The banner image of home page
-index_img: https://i.loli.net/2020/05/01/gkihqEjXxJ5UZ1C.jpg
-
+index_img: https://s2.loli.net/2023/06/07/NIxXFrkUBieA9Py.jpg
 # If the banner of page not setting, it will show the top_img
 default_top_img:
 
