--- a/themes/_config.btterfly.yml
+++ b/themes/_config.btterfly.yml
@@ -233,7 +233,7 @@ aside:
       link: https://github.com/HiPing-20
   card_announcement:
     enable: true
-    content: This is my Blog
+    content: 待测试稍安勿躁 作者还是小白
   card_recent_post:
     enable: true
     limit: 5 # if set 0 will show all
@@ -254,7 +254,7 @@ aside:
   card_archives:
     enable: true
     type: monthly # yearly or monthly
-    format: MMMM YYYY # eg: YYYY年MM月
+    format: YYYY MMMM # eg: YYYY年MM月
     order: -1 # Sort of order. 1, asc for ascending; -1, desc for descending
     limit: 8 # if set 0 will show all
     sort_order: # Don't modify the setting unless you know how it works
@@ -275,7 +275,7 @@ busuanzi:
 # Formal: Month/Day/Year Time or Year/Month/Day Time
 runtimeshow:
   enable: true
-  publish_date:
+  publish_date: 2023/06/01 00:00:00
 
 # Aside widget - Newest Comments
 newest_comments:
@@ -314,7 +314,7 @@ darkmode:
   # autoChangeMode: 1  Following System Settings, if the system doesn't support dark mode, it will switch dark mode between 6 pm to 6 am
   # autoChangeMode: 2  Switch dark mode between 6 pm to 6 am
   # autoChangeMode: false
-  autoChangeMode: false
+  autoChangeMode: true
   # Set the light mode time. The value is between 0 and 24. If not set, the default value is 6 and 18
   start: # 8
   end: # 22
