--- a/themes/_config.btterfly.yml
+++ b/themes/_config.btterfly.yml
@@ -48,7 +48,7 @@ avatar:
   effect: false
 
 # Disable all banner image
-disable_top_img: false
+disable_top_img: true
 
 # The banner image of home page
 index_img: https://s2.loli.net/2023/06/07/NIxXFrkUBieA9Py.jpg
